# sticazzi

./: README.md  reverb.py
LogicReverb/: CMakeLists.txt
LogicReverb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
